Puzzle image scaling outside of screen on small devices fixed.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html {
@@ -63,12 +64,22 @@ html {
 #button23 { top: 82.8%; left: 57%; }
 #button24 { top: 14.2%; left: 43.2%; }
 
-.fit-to-screen {
-  display: grid;
-  height: 100%;
-  max-width: 100%;
+#puzzle-image {
+  display: block;
+  max-width: 80vw;
   max-height: 80vh;
   margin: auto;
+
+  /* Piece of paper effect: */
+  border: 5px solid #ffffff; 
+  border-radius: 2px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+}
+
+.invisible {
+  background: transparent !important;
+  border: none !important;
+  font-size: 0 !important;
 }
 
 h1 {
